--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "npx tsc",
-    "run-main.ts": "yarn build && node dist/main.js"
+    "run-exo-shape": "yarn build && node dist/exo-shape/shape-and-test.js"
   },
   "dependencies": {
     "@types/node": "^20.11.17",
