--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "npx tsc",
-    "run-exo-shape": "yarn build && node dist/exo-shape/shape-and-test.js"
+    "run-exo-shape": "yarn build && node dist/exo-shape/shape-and-test.js",
+    "run-exo-shape-2": "yarn build && node dist/exo-shape-2/test.js"
   },
   "dependencies": {
     "@types/node": "^20.11.17",
