--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "scripts": {
     "build": "npx tsc",
     "run-exo-shape": "yarn build && node dist/exo-shape/shape-and-test.js",
-    "run-exo-shape-2": "yarn build && node dist/exo-shape-2/test.js"
+    "run-exo-shape-2": "yarn build && node dist/exo-shape-2/test.js",
+    "run-exo-shape-3": "yarn build && node dist/exo-shape-3/test.js"
+
   },
   "dependencies": {
     "@types/node": "^20.11.17",
+    "tsafe": "^1.6.6",
     "typescript": "^5.3.3"
   }
 }
