--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "npx tsc",
     "run-exo-shape": "yarn build && node dist/exo-shape/shape-and-test.js",
     "run-exo-shape-2": "yarn build && node dist/exo-shape-2/test.js",
-    "run-exo-shape-3": "yarn build && node dist/exo-shape-3/test.js"
+    "run-exo-shape-3": "yarn build && node dist/exo-shape-3/test.js",
+    "run-exo-shape-4": "yarn build && node dist/exo-shape-4/test.js"
+
 
   },
   "dependencies": {
