--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "run-exo-shape-2": "yarn build && node dist/exo-shape-2/test.js",
     "run-exo-shape-3": "yarn build && node dist/exo-shape-3/test.js",
     "run-exo-shape-4": "yarn build && node dist/exo-shape-4/test.js",
-    "run-exo-getElement": "yarn build && node dist/exo-getElement/getElement.js"
+    "run-exo-getElement": "yarn build && node dist/exo-getElement/getElement.js",
+    "run-exo-getElement-2": "yarn build && node dist/exo-getElement/getElement-2.js"
+
   },
   "dependencies": {
     "@types/node": "^20.11.17",
