Exo car : Update name of file

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "run-exo-shape-4": "yarn build && node dist/exo-shape-4/test.js",
     "run-exo-getElement": "yarn build && node dist/exo-getElement/getElement.js",
     "run-exo-getElement-2": "yarn build && node dist/exo-getElement/getElement-2.js",
-    "run-exo-car": "yarn build && node dist/exo-car/test.js"
+    "run-exo-car": "yarn build && node dist/exo-car/testCitroenC3.js",
+    "run-exo-car-2": "yarn build && node dist/exo-car/testPeugeot208.js"
+
 
   },
   "dependencies": {
